[package]
name = "cmpwn-gtk"
version = "0.1.0"
edition = "2018"

[dependencies]
cmpwn-lib = { path = "../cmpwn-lib" }
rand = "0.7"
structopt = "0.3"
dialoguer = "0.6"
rsa = "0.3"
base64 = "0.12"
num-bigint = "0.2"
sha-1 = "0.9"
futures = "0.3"
tokio = "0.2"
once_cell = "1.4"

[dependencies.libhandy]
git = "https://gitlab.gnome.org/World/Rust/libhandy-rs"

[dependencies.glib]
version = "0.9"
features = ["v2_60"]

[dependencies.gtk]
version = "0.8"
features = ["v3_16"]

[dependencies.gio]
version = "0.8"
features = ["v2_44"]

[dependencies.yasna]
features = ["num-bigint"]
version = "0.3"